Updated tuple estimation :pencil2:

--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -8,26 +8,24 @@ This artefact contains the physical schema of the database, the identification a
 
 ### 1.1. Tuple Estimation
 
-| Relation reference | Relation Name    | Order of magnitude        | Estimated growth |
-| ------------------ | ---------------- | ------------------------- | ---------------- |
-| R01                | UserTable        | hundreds                  | order per time   |
-| R02                | Task             | hundreds                  | dozens per month |
-| R03                | Assigned         | tens                      | hundreds per day |
-| R04                | EditTaskInfo     | units                     | no growth        |
-| R05                | CloseRequest     | tens                      | order per time   |
-| R06                | Tag              | hundreds                  | dozens per month |
-| R07                | Tagged           | hundreds                  | hundreds per day |
-| R08                | Comment          | thousands                 | order per time   |
-| R09                | Thread           | hundreds                  | dozens per month |
-| R10                | Project          | tens                      | units per month  |
-| R11                | Joined           | hundreds                  | order per time   |
-| R12                | PremiumSignature | hundreds                  | dozens per month |
-| R13                | ProjectForum     | tens                      | units per month  |
-| R14                | ForumPost        | hundreds                  | order per time   |
-| R15                | Reply            | thousands                 | tens per week    |
-| R16                | Country          | hundreds                  | no growth        |
-| R17                | Admin            | units                     | no growth        |
-| R18                | BannedRecord     | tens                      | units per month  |
+| Relation reference | Relation Name    | Order of magnitude        | Estimated growth   |
+| ------------------ | ---------------- | ------------------------- | ------------------ |
+| R01                | UserTable        | hundreds                  | tens per month     |
+| R02                | Task             | thousands                 | hundreds per month |
+| R03                | Assigned         | thousands                 | hundreds per day   |
+| R04                | EditTaskInfo     | tens                      | units per day      |
+| R05                | CloseRequest     | thousands                 | hundreds per month |
+| R06                | Tag              | tens                      | units per week     |
+| R07                | Tagged           | thousands                 | hundreds per month |
+| R08                | Comment          | thousands                 | hundreds per month |
+| R09                | Project          | tens                      | units per month    |
+| R10                | Joined           | hundreds                  | tens per month     |
+| R11                | PremiumSignature | tens                      | units per month    |
+| R12                | ForumPost        | hundreds                  | tens per week      |
+| R13                | Reply            | thousands                 | tens per week      |
+| R14                | Country          | hundreds                  | no growth          |
+| R15                | Admin            | units                     | no growth          |
+| R16                | BannedRecord     | tens                      | units per month    |
 
 <!-- Orders of magnitude units tens hundreds thousands  -->
 
