finished updates :sparkles:

--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -272,6 +272,167 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
 </table>
 
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>UPDATE01</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Update user information</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>Once per month</td>
+    </td>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">
+        UPDATE "UserTable"
+            SET password = $password, email = $email, premium  = $premium, banned = $banned, name = $name, gender = $gender, address = $address, institution = $institution, description = $description, birthDate = $birthDate
+            WHERE idUser = $idUser;
+        </code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>UPDATE02</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Update project information</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>Once per week</td>
+    </td>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">
+        UPDATE "Project"
+            SET name = $name, description = $description, private = $private
+            WHERE idProject = $idProject;
+        </code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>UPDATE03</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Update forum post</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>Once per day</td>
+    </td>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">
+        UPDATE "ForumPost"
+            SET lastEditDate = $lastEditDate, title = $title, content = $content
+            WHERE idPost = $idPost;
+        </code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>UPDATE04</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Update task comment</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>Once per day</td>
+    </td>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">
+        UPDATE "Comment"
+            SET lastEditDate = $lastEditDate, content = $content
+            WHERE idComment = $idComment;
+        </code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>UPDATE05</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Update task information</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>Once per day</td>
+    </td>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">
+        UPDATE "Task"
+            SET lastEditDate = $lastEditDate, title = $title, description = $description, deadline = $deadline, completed = $completed, completionDate = $completionDate
+            WHERE idTask = $idTask;
+        </code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>UPDATE06</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Update close request information</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>Once per day</td>
+    </td>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">
+        UPDATE "CloseRequest"
+            SET title = $title, description = $description, approved = $approved
+            WHERE idRequest = $idRequest;
+        </code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>UPDATE07</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Update admin information</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>Once per day</td>
+    </td>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">
+        UPDATE "Admin"
+            SET password = $password, email = $email
+            WHERE idAdmin = $idAdmin;
+        </code></td>
+    </tr>
+</table>
+
 ## 2. Proposed Indices
 
 ### 2.1. Performance Indices
