finsihed deletions, need to change frequency :stars:

--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -433,6 +433,139 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
 </table>
 
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>DELETE01</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Delete task</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>Once per day</td>
+    </td>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">
+         DELETE FROM Task
+         WHERE idTask = $idTask;
+        </code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>DELETE02</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Delete task comment</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>Once per day</td>
+    </td>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">
+         DELETE FROM Comment
+         WHERE idComment = $idComment;
+        </code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>DELETE03</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Delete project</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>Once per day</td>
+    </td>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">
+         DELETE FROM Project
+         WHERE idProject = $idProject;
+        </code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>DELETE04</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Delete forum post</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>Once per day</td>
+    </td>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">
+         DELETE FROM ForumPost
+         WHERE idPost = $idPost;
+        </code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>DELETE05</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Delete forum post reply</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>Once per day</td>
+    </td>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">
+         DELETE FROM Reply
+         WHERE idReply = $idReply;
+        </code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>DELETE06</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Delete user</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>Once per day</td>
+    </td>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">
+         DELETE FROM User
+         WHERE idUser = $idUser;
+        </code></td>
+    </tr>
+</table>
+
+
 ## 2. Proposed Indices
 
 ### 2.1. Performance Indices
