--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -1,11 +1,8 @@
 # A6: Indexes, triggers, user functions and population
 
-This artefact contains the physical schema of the database, the identification and characterisation of the indexes, the support of data integrity rules with triggers and the definition of the database user-defined functions of our **Project Management** Web Application. This artefact also contains the database's workload as well as the complete database creation script, including all SQL necessary to define all integrity constraints, indexes and triggers.
+This artefact contains the physical schema of the database, the identification and characterisation of the indexes, the support of data integrity rules with triggers and the definition of the database user-defined functions. This artefact also contains the database's workload as well as the complete database creation script, including all SQL necessary to define all integrity constraints, indexes and triggers.
 
 ## 1. Database Workload
-
-> A study of the predicted system load (database load), organized in subsections.
-
 ### 1.1. Tuple Estimation
 
 | Relation reference | Relation Name    | Order of magnitude        | Estimated growth   |
@@ -31,18 +28,27 @@ This artefact contains the physical schema of the database, the identification a
 
 ### 1.2. Frequent Queries
 
-> Most important queries (SELECT) and their frequency.
-
-| Query reference   | SELECT01                               |
-| Query description | One sentence describing the query goal |
-| Query frequency   | magnitude per time                     |
-| ----------------- | -------------------------------------- |
-| SQL code                                                   |
-
+<table>
+  <tr>
+    <td><b>Query reference</b></td>
+    <td><b>SELECT01</b></td>
+  </tr>
+  <tr>
+    <td><b>Query description</b></td>
+    <td><b>One sentence describing the query goal</b></td>
+  </tr>
+  <tr>
+    <td><b>Query frequency</b></td>
+    <td><b>magnitude per time</b></td>
+  </tr>
+  <tr>
+    <td colspan =2>
+    SQL Code
+    </td>
+  </tr>
+</table>
 
 ### 1.3. Frequent Updates
-
-> Most important updates (INSERT, UPDATE, DELETE) and their frequency.
 
 <table>
     <tr>
