--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -576,8 +576,6 @@ This artefact contains the physical schema of the database, the identification a
 
 ### 2.1. Performance Indices
 
-> Indices proposed to improve performance of the identified queries.
-
 | Index reference | IDX01                                  |
 | Related queries | SELECT01, ...                          |
 | Index relation  | Relation where the index is applied    |
@@ -592,8 +590,6 @@ This artefact contains the physical schema of the database, the identification a
 
 
 ### 2.2. Full-text Search Indices
-
-> The system being developed must provide full-text search features supported by PostgreSQL. Thus, it is necessary to specify the fields where full-text search will be available and the associated setup, namely all necessary configurations, indexes definitions and other relevant details.
 
 <table>
     <tbody>
@@ -855,43 +851,41 @@ This artefact contains the physical schema of the database, the identification a
 
 ## 3. Triggers
 
-> User-defined functions and trigger procedures that add control structures to the SQL language or perform complex computations, are identified and described to be trusted by the database server. Every kind of function (SQL functions, Stored procedures, Trigger procedures) can take base types, composite types, or combinations of these as arguments (parameters). In addition, every kind of function can return a base type or a composite type. Functions can also be defined to return sets of base or composite values.
-
 <table>
-    <tbody>
-        <tr>
-        <td><b>Trigger reference<b></td>
-        <td>TRIGGER01</td>
-        </tr>
-        <tr>
-        <td><b>Trigger description</b></td>
-        <td>Only a User who Joined a Project can create Posts in it's Forum</td>
-        </tr>
-        <tr>
-        <td colspan="2">
-        <code>
-        DROP TRIGGER IF EXISTS onCreatePost ON ForumPost;
+  <tbody>
+    <tr>
+      <td><b>Trigger reference<b></td>
+      <td>TRIGGER01</td>
+    </tr>
+    <tr>
+      <td><b>Trigger description</b></td>
+      <td>Only a User who Joined a Project can create Posts in it's Forum</td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <code class="language-sql">
+          DROP TRIGGER IF EXISTS onCreatePost ON ForumPost;
 
-        CREATE OR REPLACE FUNCTION insertPost() RETURNS TRIGGER AS
-        $BODY$
+          CREATE OR REPLACE FUNCTION insertPost() RETURNS TRIGGER AS
+          $BODY$
           BEGIN
-            IF NOT EXISTS (
-              SELECT Joined.idJoined FROM Joined
-              WHERE (new.idUser = idUser AND new.idProject = idProject))
+          IF NOT EXISTS (
+            SELECT Joined.idJoined FROM Joined
+            WHERE (new.idUser = idUser AND new.idProject = idProject))
             THEN
-              RAISE EXCEPTION 'Only a user who joined a project can post in its forum.';
+            RAISE EXCEPTION 'Only a user who joined a project can post in its forum.';
             ELSE
-              INSERT INTO ForumPost(creationDate, lastEditDate, title, content, idProject, idUser)
-              VALUES (new.creationDate, new.lastEditDate, new.title, new.content, new.idProject, new.idUser);
+            INSERT INTO ForumPost(creationDate, lastEditDate, title, content, idProject, idUser)
+            VALUES (new.creationDate, new.lastEditDate, new.title, new.content, new.idProject, new.idUser);
             END IF;
             RETURN NEW;
-          END
-        $BODY$
-        LANGUAGE plpgsql;
+            END
+            $BODY$
+            LANGUAGE plpgsql;
         </code>
-        </td>
-        </tr>
-    </tbody>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 
