--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -863,24 +863,24 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td colspan="2">
-        DROP TRIGGER IF EXISTS onCreatePost ON ForumPost;
-
-        CREATE OR REPLACE FUNCTION insertPost() RETURNS TRIGGER AS
-        $BODY$
-        BEGIN
-          IF NOT EXISTS (
-            SELECT Joined.idJoined FROM Joined
-            WHERE (new.idUser = idUser AND new.idProject = idProject))
-          THEN
-            RAISE EXCEPTION 'Only a user who joined a project can post in its forum.';
-          ELSE
-            INSERT INTO ForumPost(creationDate, lastEditDate, title, content, idProject, idUser)
-            VALUES (new.creationDate, new.lastEditDate, new.title, new.content, new.idProject, new.idUser);
-          END IF;
-          RETURN NEW;
-        END
-        $BODY$
-        LANGUAGE plpgsql;
+        <code>
+          CREATE OR REPLACE FUNCTION insertPost() RETURNS TRIGGER AS
+          $BODY$
+          BEGIN
+            IF NOT EXISTS (
+              SELECT Joined.idJoined FROM Joined
+              WHERE (new.idUser = idUser AND new.idProject = idProject))
+            THEN
+              RAISE EXCEPTION 'Only a user who joined a project can post in its forum.';
+            ELSE
+              INSERT INTO ForumPost(creationDate, lastEditDate, title, content, idProject, idUser)
+              VALUES (new.creationDate, new.lastEditDate, new.title, new.content, new.idProject, new.idUser);
+            END IF;
+            RETURN NEW;
+          END
+          $BODY$
+          LANGUAGE plpgsql;
+        </code>
       </td>
     </tr>
   </tbody>
