--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -863,7 +863,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td colspan="2">
-        <code>
+        ```SQL
           CREATE OR REPLACE FUNCTION insertPost() RETURNS TRIGGER AS
           $BODY$
           BEGIN
@@ -880,7 +880,7 @@ This artefact contains the physical schema of the database, the identification a
           END
           $BODY$
           LANGUAGE plpgsql;
-        </code>
+        ```SQL
       </td>
     </tr>
   </tbody>
